<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>dk.serik</groupId>
	<artifactId>recipes</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>recipes</name>
	<description>A RESTFull Recipes application</description>
	<properties>	
		<liquibase-maven-plugin-version>4.17.0</liquibase-maven-plugin-version>
		<lombok-version>1.18.24</lombok-version>
		<jacoco-version>0.8.8</jacoco-version>
		<java.version>11</java.version>
		<surefire-version>3.0.0-M7</surefire-version>
		
		<!--  project -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
		
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
		</dependency>		
		
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>	
		</dependency>
		
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>		
		</dependency>
		
		<!--
		<dependency>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>${jacoco-version}</version>
		</dependency>
-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>	
			
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.assertj</groupId>
		    <artifactId>assertj-core</artifactId>		    
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.jacoco</groupId>
			    <artifactId>jacoco-maven-plugin</artifactId>
			    <version>${jacoco-version}</version>
			    <executions>
					<execution>
			            <id>jacoco-initialize</id>
			            <goals>
			                <goal>prepare-agent</goal>
			            </goals>
			        </execution>
			        <execution>
			            <id>jacoco-site</id>
			            <phase>test</phase>
			            <goals>
			                <goal>report</goal>
			            </goals>
			        </execution>
			    </executions>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-surefire-plugin</artifactId>
    			<configuration>
    			<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
			    <!--
			        <excludes>
			            <exclude>DataTest.java</exclude>
			        </excludes>
			        <includes>
			            <include>DataCheck.java</include>
			        </includes>
			        -->
			    </configuration>			
			</plugin>
			<!--
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.14.1</version>
				<configuration>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx4096m -XX:MaxPermSize=512M ${itCoverageAgent}</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
			<plugin>
		        <groupId>org.liquibase</groupId>
		        <artifactId>liquibase-maven-plugin</artifactId>
		        <version>${liquibase-maven-plugin-version}</version>
		        <configuration>                  
		            <propertyFile>src/main/resources/liquibase.properties</propertyFile>
		        </configuration>                
		    </plugin> --> 
		</plugins>
	</build>
	
	

</project>
